Fix Stream toList crash
Signed-off-by: saulhdev <saul_henriquez@hotmail.com>