@@ -109,6 +109,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.CancellationException;
+import java.util.stream.Collectors;
 
 /**
  * Runnable for the thread that loads the contents of the launcher:
@@ -446,8 +447,8 @@ public class LoaderTask implements Runnable {
                 mInstallingPkgsCached = installingPkgs;
             }
             installingPkgs.forEach(mApp.getIconCache()::updateSessionCache);
-            FileLog.d(TAG, "loadWorkspace: Packages with active install sessions: ");
-            //+ installingPkgs.keySet().stream().map(info -> info.mPackageName).toList());
+            FileLog.d(TAG, "loadWorkspace: Packages with active install sessions: "
+                    + installingPkgs.keySet().stream().map(info -> info.mPackageName).collect(Collectors.toList()));
 
             mFirstScreenBroadcast = new FirstScreenBroadcast(installingPkgs);
 
@@ -571,7 +572,7 @@ public class LoaderTask implements Runnable {
     private void processFolderItems() {
         // Sort the folder items, update ranks, and make sure all preview items are high res.
         List<FolderGridOrganizer> verifiers = mApp.getInvariantDeviceProfile().supportedProfiles
-                .stream().map(FolderGridOrganizer::createFolderGridOrganizer).toList();
+                .stream().map(FolderGridOrganizer::createFolderGridOrganizer).collect(Collectors.toList());
         for (CollectionInfo collection : mBgDataModel.collections) {
             if (!(collection instanceof FolderInfo folder)) {
                 continue;
